<resources>
    <string name="app_name">KHS</string>
    <string name="FACEBOOK_APP_ID">470290300376695</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">67ed5d8167ab4426557f1fc23b6ae77d</string>
    <string name="ak_login_protocol_scheme">ak67ed5d8167ab4426557f1fc23b6ae77d</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_supplier">Suppliers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
